@@ -77,6 +77,8 @@ class UserMgr extends RegisterMgr
             'editPerms'             => array('editPerms'),
             'updatePerms'           => array('updatePerms', 'redirectToDefault'),
             'syncToRole'            => array('syncToRole', 'redirectToDefault'),
+            'viewLogin'             => array('viewLogin'),
+            'truncateLoginTbl'      => array('truncateLoginTbl'),
         );
     }
 
@@ -100,7 +102,7 @@ class UserMgr extends RegisterMgr
         $input->user->is_acct_active = (isset($input->user->is_acct_active)) ? 1 : 0;
         $input->sortBy      = SGL_Util::getSortBy($req->get('frmSortBy'), SGL_SORTBY_USER);
         $input->sortOrder   = SGL_Util::getSortOrder($req->get('frmSortOrder'));
-//        dumpr($input);
+
         $input->roleSync        = $req->get('roleSync');
         if ($input->roleSync == 'null') { 
             $input->roleSync = null;
@@ -376,6 +378,67 @@ class UserMgr extends RegisterMgr
         }
         $output->totalItems = $aPagedData['totalItems'];
         $output->addOnLoadEvent("document.getElementById('frmUserMgrChooser').users.disabled = true");
+    }
+
+    function _viewLogin(&$input, &$output){
+        SGL::logMessage(null, PEAR_LOG_DEBUG);
+
+        $conf = & $GLOBALS['_SGL']['CONF'];
+        $output->template = 'userManagerLogins.html';
+        $output->pageTitle = $this->pageTitle . ' :: Login Data';
+        $dbh = & SGL_DB::singleton();
+
+        $allowedSortFields = array('date_time','remote_ip');
+        if (  !empty($input->sortBy)
+           && !empty($input->sortOrder)
+           && in_array($input->sortBy, $allowedSortFields)) {
+                $orderBy_query = ' ORDER BY ' . $input->sortBy . ' ' . $input->sortOrder ;
+        } else {
+            $orderBy_query = ' ORDER BY date_time ASC ';
+        }
+        if (!empty($input->userID) ){
+            $query = "
+                SELECT  date_time, remote_ip, login_id
+                FROM    {$conf['table']['login']}
+                WHERE   usr_id = $input->userID" .
+                $orderBy_query;
+        }
+
+        $limit = $_SESSION['aPrefs']['resPerPage'];
+        $pagerOptions = array(
+            'mode'      => 'Sliding',
+            'delta'     => 3,
+            'perPage'   => $limit,
+            'totalItems'=> $input->totalItems,
+        );
+        $aPagedData = SGL_DB::getPagedData($dbh, $query, $pagerOptions);
+
+        $output->aPagedData = $aPagedData;
+        if (is_array($aPagedData['data']) && count($aPagedData['data'])) {
+            $output->pager = ($aPagedData['totalItems'] <= $limit) ? false : true;
+        }
+
+    }
+
+    function _truncateLoginTbl(&$input, &$output){
+
+        SGL :: logMessage(null, PEAR_LOG_DEBUG);
+        $dbh = & SGL_DB::singleton();
+        $conf = & $GLOBALS['_SGL']['CONF'];
+
+        if (is_array($input->aDelete)) {
+            foreach($input->aDelete as $v){
+                $qry = "DELETE FROM {$conf['table']['login']} WHERE login_id = $v";
+                $dbh->query($qry); 
+            }
+        } else {
+            SGL :: raiseError('Incorrect parameter passed to '.__CLASS__.'::'.__FUNCTION__, SGL_ERROR_NOAFFECTEDROWS);
+        }
+
+        //  redirect on success
+        SGL :: raiseMsg('Deleted successfully');
+        SGL_HTTP :: redirect(array ('action' => 'viewLogin', 'frmUserID' => "{$input->userID}"));
+
     }
     
     function _requestPasswordReset(&$input, &$output)
