@@ -11,7 +11,7 @@
     </div>
     <table class="wide">
         <tr>
-            <td colspan="10">
+            <td colspan="12">
                 <input type="button" value="{translate(#add user#)}" onclick="javascript:document.location.href='{makeUrl(#add#,#user#,##)}'" />
                 <input type="button" value="{translate(#search#)}"                onclick="javascript:document.location.href='{makeUrl(#add#,#usersearch#,#user#)}'" />
                 <input type="button" value="{translate(#import users#)}" onclick="javascript:document.location.href='{makeUrl(##,#userImport#,##)}'" />
@@ -30,6 +30,7 @@
             <th>{translate(#Edit#)}</th>
             <th>{translate(#Password#)}</th>
             <th>{translate(#Permissions#)}</th>
+            <th>{translate(#Logins#)}</th>
         </tr>
 
         <tr class="{switchRowClass()}" flexy:foreach="aPagedData[data],key,aValue">
@@ -57,6 +58,7 @@
                     onClick="javascript:document.location.href='{makeUrl(#editPerms#,#user#,##,aPagedData[data],#frmUserID|usr_id#,key)}'" />
             </td>
             <td align="center" flexy:if="isAdmin(aValue[role_id])">&nbsp;</td>
+            <td align="center"><a href="{makeUrl(#viewLogin#,#user#,##,aPagedData[data],#frmUserID|usr_id#,key)}">list</a></td>
         </tr>
         <tr>
             <td colspan="10">{translate(#With selected user(s)#)}: <input type="submit" name="delete" value="{translate(#delete#)}" onclick="return confirmSubmit('{translate(#user#)}', 'users')" />
